# agentic-ai

./: .env.example  .env.template  .gitignore  Dockerfile  VENV_README.md  activate.bat  activate.ps1  build_dashboard.py  check_env.py  client_worker.py  docker-compose.yml  logging_config.yaml  mcp_client_config.json  mcp_client_config.json.template  pyproject.toml  run_dashboard_exe.bat  test_api_endpoints.py  test_db_init.py  test_task2.json
.context/: docs.md  index.md
.github/: copilot-instructions.md
Demo3/: .env  .env.example  .gitignore  README.md  agent.py  prompt_template.py  pyproject.toml  requirements.txt
Demo4/: .gitignore  AgentManagerDashboard.spec  Dockerfile  README.md  build_dashboard.bat  client_worker.py  dashboard.spec  docker-compose.monitoring.yml  docker-compose.yml  run_dashboard.bat  run_dashboard.py  run_tests.py  start_worker.bat  test_workflow.json
agent_manager/: exceptions.py  id_generator.py  orm.py  service.py
app/: api_client.py  dashboard.py  requirements.txt
deployment/: .env.template  README.md
docs/: development-phases-guide.md  project-roadmap.md
monitoring/: README.md
scripts/: README.md  check_db.py  check_recent_projects.py  create_project_dir.py  delete_no_progress_workflows.py  delete_unnamed_workflows_postgres.py  migrate_add_id_counters.py  migrate_add_project_status.py  migrate_add_projects.py  migrate_add_task_name.py  monitor_workflow.py  show_workflows.py  test_api_direct.py  test_client_worker.py  test_dashboard_api.py  test_file_coordination.py  test_worker_status.py
tests/: conftest.py  (+3 more)
(+90 files in other folders)
